--- a/index.html
+++ b/index.html
@@ -8,5 +8,24 @@
   </head>
   <body>
 
+    <h1>Tic Tac Toe</h1>
+    <div class="board">
+      <div class="row row-1">
+        <div class="box box-1"></div>
+        <div class="box box-2"></div>
+        <div class="box box-3"></div>
+      </div>
+      <div class="row row-2">
+        <div class="box box-1"></div>
+        <div class="box box-2"></div>
+        <div class="box box-3"></div>
+      </div>
+      <div class="row row-3">
+        <div class="box box-1"></div>
+        <div class="box box-2"></div>
+        <div class="box box-3"></div>
+      </div>
+    </div>
+
   </body>
 </html>
