--- a/index.html
+++ b/index.html
@@ -27,5 +27,9 @@
       </div>
     </div>
 
+
+
+    <script src="js/vendor/jquery-1.11.3.min.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
