--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 
 
-    <script src="js/vendor/jquery-1.11.3.min.js"></script>
+    <script src="js/jquery-1.11.3.min.js"></script>
     <script src="js/script.js"></script>
   </body>
 </html>
