--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Tic Tac Toe!</title>
 
-    <link rel="stylesheet" href="styles.scss">
+    <link rel="stylesheet" type="text/css" href="styles.scss">
   </head>
   <body>
 
