Add active player indicator

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
   <body>
 
     <h1>Tic Tac Toe</h1>
+
+    <div class="player">
+      <span class="player-x goes">PLAYER X</span>
+      <span class="player-o">PLAYER O</span>
+    </div>
+
     <div class="board">
       <div class="row row-1">
         <div class="box box-1"></div>
@@ -26,6 +32,7 @@
         <div class="box box-3"></div>
       </div>
     </div>
+
 
 
 
