--- a/index.html
+++ b/index.html
@@ -2,17 +2,17 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Tic Tac Toe!</title>
+    <title>Happy Hour!</title>
 
     <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
 
-    <h1>Tic Tac Toe</h1>
-
     <div class="player">
-      <span class="player-x goes">PLAYER X</span>
-      <span class="player-o">PLAYER O</span>
+      <span class="player-x goes">BEERS</span>
+      <span>or</span>
+      <span class="player-o">MARTINIS</span>
     </div>
 
     <div class="board">
