Add refresh button

--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
         <div class="box box-3"></div>
       </div>
     </div>
+    
+    <button class="reload">
+      Another round?
+    </button>
 
 
 
