--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@
   </head>
   <body>
 
+    <div class="bg"></div>
+
     <div class="player">
       <span class="player-x goes">BEERS</span>
-      <span>or</span>
-      <span class="player-o">MARTINIS</span>
+      or
+      <span class="player-o">COCKTAILS</span>
+      ?
     </div>
 
     <div class="board">
@@ -32,7 +35,7 @@
         <div class="box box-3"></div>
       </div>
     </div>
-    
+
     <button class="reload">
       Another round?
     </button>
