Start game winning/ending
Original attempt at game winning/completion (incomplete)

--- a/index.html
+++ b/index.html
@@ -12,28 +12,32 @@
     <div class="bg"></div>
 
     <div class="player">
-      <span class="player-x goes">BEERS</span>
+      <span id="player-x" class="goes">BEERS</span>
       or
-      <span class="player-o">COCKTAILS</span>
+      <span id="player-o">COCKTAILS</span>
       ?
     </div>
 
     <div class="board">
       <div class="row row-1">
-        <div class="box box-1"></div>
-        <div class="box box-2"></div>
-        <div class="box box-3"></div>
+        <div class="box r1 c1 d1"></div>
+        <div class="box r1 c2"></div>
+        <div class="box r1 c3 d2"></div>
       </div>
       <div class="row row-2">
-        <div class="box box-1"></div>
-        <div class="box box-2"></div>
-        <div class="box box-3"></div>
+        <div class="box r2 c1"></div>
+        <div class="box r2 c2 d1 d2"></div>
+        <div class="box r2 c3"></div>
       </div>
       <div class="row row-3">
-        <div class="box box-1"></div>
-        <div class="box box-2"></div>
-        <div class="box box-3"></div>
+        <div class="box r3 c1 d2"></div>
+        <div class="box r3 c2"></div>
+        <div class="box r3 c3 d1"></div>
       </div>
+    </div>
+
+    <div class="winner">
+
     </div>
 
     <button class="reload">
